ido-version/main/default/objects/Q_Industries_Version_Info__mdt/Q_Industries_Version_Info__mdt.object-meta.xml
<CustomObject>
    <description>Contains version information about the IDO</description>
    <label>Q Industries Version Info</label>
    <pluralLabel>Q Industries Version Info</pluralLabel>
</CustomObject>