ido-version/main/default/objects/Q_Industries_Version_Info__mdt/fields/Core_Release_Name__c.field-meta.xml
<CustomField>
    <fullName>Core_Release_Name__c</fullName>
    <description>Seasonal release name e.g. Summer &#39;20</description>
    <label>Core Release Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>