ido-version/main/default/objects/Q_Industries_Version_Info__mdt/fields/Core_Release_Number__c.field-meta.xml
<CustomField>
    <fullName>Core_Release_Number__c</fullName>
    <description>Core release number that this IDO is based on e.g. 220</description>
    <label>Core Release Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>