ido-version/main/default/objects/Q_Industries_Version_Info__mdt/fields/IDO_Release_Name__c.field-meta.xml
<CustomField>
    <fullName>IDO_Release_Name__c</fullName>
    <description>IDO release name e.g. RCG IDO Summer &#39;20 R1</description>
    <inlineHelpText>IDO release name e.g. RCG IDO Summer &#39;20 R1</inlineHelpText>
    <label>IDO Release Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>