ido-version/main/default/objects/Q_Industries_Version_Info__mdt/fields/SDO_Trialforce_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>SDO_Trialforce_Template_ID__c</fullName>
    <description>If based on the SDO, which SDO trialforce template ID is this IDO based on</description>
    <label>SDO Trialforce Template ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>